--- a/survey-app/public/styles/site/_layout.styl
+++ b/survey-app/public/styles/site/_layout.styl
@@ -10,7 +10,6 @@
 .scale
     display inline-block
 
-
 .column-labels
     font-weight bold
 
@@ -49,17 +48,6 @@
     background-color white
     padding 20px
 
-#assessment-mid
-    background-color white
-
-#assessment-body
-    background-color $light-blue
-    padding-bottom 30px
-    margin-top 10px
-
-#assessment-body h3, #assessment-body h2
-    font-family sans-serif
-
 #assessment-label
     margin-top 10px
 
@@ -83,12 +71,6 @@
 
 #landing h2, #landing-header h2
     font-family $font-family-serif
-
-#about
-    background-color $light-blue
-
-#about p
-    line-height 2
 
 #signin
     background-color $dark-blue
@@ -149,3 +131,9 @@
 
 .leftLink
     margin-right 40px
+
+.scaleLeft
+    margin-right 5px
+
+.scaleRight
+    margin-left 1em
